update new test in tabs

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
   </script>-->
 
   <link href="build/main.css" rel="stylesheet">
-
+  <script src="https://www.paysafe.com/hosted/js/1.0.0/paysafe.min.js"></script>
 </head>
 <body>
 
