--- a/src/pages/home/home2.html
+++ b/src/pages/home/home2.html
@@ -11,14 +11,14 @@
 	<ion-row >
 		<ion-col>
 			<ion-label stacked>Card Number</ion-label>
-			<div id="paysafeCardNumber" class="paysafe-input-field"></div>
+			<div id="paysafeCardNumber2" class="paysafe-input-field"></div>
 			<ion-label stacked>Card Expiary</ion-label>
-			<div id="paysafeExpiryDate" class="paysafe-input-field"></div>
+			<div id="paysafeExpiryDate2" class="paysafe-input-field"></div>
 			<ion-label stacked>CVV</ion-label>
-			<div id="paysafeCVV" class="paysafe-input-field"></div>
+			<div id="paysafeCVV2" class="paysafe-input-field"></div>
 		</ion-col>
 	</ion-row>
-	<button  ion-button id="paysafePayNow" item-right icon-left full tappable>
+	<button  ion-button id="paysafePayNow2" item-right icon-left full tappable>
 		<ion-icon name="send"></ion-icon>Pay
 	</button>
 </ion-content>
